Fix zoomed images z-index making them overlap header

--- a/less/specific.less
+++ b/less/specific.less
@@ -211,12 +211,12 @@
 			box-shadow: #FFFA 0 0 15px;
 			border-radius: 2px;
 			position: relative;
-			z-index: 69;
+			z-index: 15;
 		}
 	}
 }
 #films .films-projects img.clicked {
-	transform: scale(2.5);
+	transform: scale(2);
 }
 #front img.fullone {
 	transition: transform 0.3s ease;
